istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-routing
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: app2
        port:
          number: 8080
      weight: 80
    - destination:
        host: app1
        port:
          number: 8080
      weight: 20
